<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/experience_val"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/experience_val"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_val" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="54dp"
        android:layout_height="23dp"
        android:text="@string/name_text"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/name_val" />

    <TextView
        android:id="@+id/name_val"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/name_val"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/experience_val"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="76dp"
        android:layout_height="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="30dp"
        android:text="@string/experience_text"
        app:layout_constraintEnd_toStartOf="@+id/horiz_guide"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/experience_val" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="38dp"
        android:layout_height="19dp"
        android:text="@string/dob_text"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/dob" />

    <TextView
        android:id="@+id/dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/dob_val"
        android:textColor="?attr/colorControlActivated"
        app:layout_constraintStart_toStartOf="@+id/experience_val"
        app:layout_constraintTop_toBottomOf="@+id/experience_val" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/education_text"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/education" />

    <TextView
        android:id="@+id/education"
        android:layout_width="86dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/education_val"
        android:textColor="@android:color/holo_blue_light"
        app:layout_constraintStart_toStartOf="@+id/dob"
        app:layout_constraintTop_toBottomOf="@+id/dob" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toStartOf="@+id/horiz_guide"
        app:layout_constraintStart_toStartOf="@+id/horiz_guide"
        app:layout_constraintTop_toTopOf="@+id/horiz_guide2" />

    <android.support.constraint.Guideline
        android:id="@+id/horiz_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/horiz_guide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="43dp" />


</android.support.constraint.ConstraintLayout>